--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Pleasing parsing." />
   <meta property="og:description" content="Pleasing parsing." />
-  <meta property="og:image" content="tm2.jpg" />
+  <meta property="og:image" content="p2.jpg" />
   <title>Parsley</title>
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
